# magellanicus

./: .gitignore  Cargo.toml
flycam-test/: Cargo.toml
flycam-test/src/: main.rs
magellanicus/: Cargo.toml
magellanicus/src/: error.rs  lib.rs  renderer.rs  vertex.rs
magellanicus/src/renderer/: data.rs  parameters.rs  player_viewport.rs  vulkan.rs
magellanicus/src/renderer/data/: bitmap.rs  bsp.rs  geometry.rs  shader.rs  sky.rs
magellanicus/src/renderer/parameters/: bitmap.rs  bsp.rs  geometry.rs  shader.rs  sky.rs
magellanicus/src/renderer/parameters/bitmap/: mipmap_iterator.rs
magellanicus/src/renderer/vulkan/: bitmap.rs  bsp.rs  geometry.rs  helper.rs  material.rs  pipeline.rs  player_viewport.rs  shader.rs  sky.rs  vertex.rs
magellanicus/src/renderer/vulkan/material/: shader_environment.rs  simple_shader.rs
magellanicus/src/renderer/vulkan/pipeline/: color_box.rs  pipeline_loader.rs  shader_environment.rs  simple_texture.rs  solid_color.rs
magellanicus/src/renderer/vulkan/pipeline/color_box/: fragment.frag  vertex.vert
magellanicus/src/renderer/vulkan/pipeline/include/: blend.frag  material.frag  material.vert
magellanicus/src/renderer/vulkan/pipeline/shader_environment/: fragment.frag  shader_environment_data.glsl  vertex.vert
magellanicus/src/renderer/vulkan/pipeline/simple_texture/: fragment.frag  vertex.vert
magellanicus/src/renderer/vulkan/pipeline/solid_color/: fragment.frag  vertex.vert
magellanicus/src/renderer/vulkan/shader/: pipeline_loader.rs  solid_color.rs
magellanicus/src/renderer/vulkan/shader/solid_color/: fragment.frag  (+1 more)
