[package]
name = "flycam-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
magellanicus = { path = "../magellanicus" }
ringhopper = { git = "https://github.com/FishAndRips/ringhopper" }
ringhopper-engines = { git = "https://github.com/FishAndRips/ringhopper" }
clap = { version = "4.5.18", features = ["derive"] }
clap_derive = { version = "4.5.18" }
sdl2 = { version = "0.36.0", features = ["raw-window-handle"] }
glam = "0.29.0"
